# MemoryManager

./: .gitignore  api_test.http  mypy.ini  openapi.yaml  openapi.yml  pyproject.toml  test.http
app/: demo.py  llm_model.py  main.py  server.py
memory/: convention.py  in_memory.py  llm_ability.py  manager.py  memory_manager.py  model.py  prompt.py  scope.py
memory_common/: convention.py  model.py
memory_server/: in_memory.py  llm_ability.py  prompt.py  server_memory_session.py
server/: app.py  llm_model.py  main.py
