[project]
name = "memorymanager"
version = "0.0.1"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "flask>=3.1.1",
    "flask-cors>=4.0.0",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.5",
]
